force-app/main/default/objects/Position__c/Position__c.object-meta.xml
<CustomObject>
    <description>This objecct is used to hold all the open positions in the Org.</description>
    <label>Position</label>
    <nameField>
        <label>New Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>