force-app/main/default/objects/Position__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hiring Manager</label>
    <referenceTo>Hiring_Manager__c</referenceTo>
    <relationshipLabel>My Positions</relationshipLabel>
    <relationshipName>My_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>