force-app/main/default/objects/Position__c/fields/HR_Contact__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact__c</fullName>
    <label>HR Contact</label>
    <type>Phone</type>
</CustomField>