force-app/main/default/objects/Position__c/fields/HR_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Email__c</fullName>
    <label>HR Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>