force-app/main/default/objects/Position__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <description>gives the difference between Open and Close dates</description>
    <formula>Open_Date__c-Close_Date__c</formula>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>