force-app/main/default/objects/Position__c/fields/Passport_Required_del__c.field-meta.xml
<CustomField>
    <fullName>Passport_Required_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Required</label>
    <type>Checkbox</type>
</CustomField>