force-app/main/default/objects/Position__c/fields/PID_000000__c.field-meta.xml
<CustomField>
    <fullName>PID_000000__c</fullName>
    <displayFormat>PID-{000000}</displayFormat>
    <label>Position ID</label>
    <type>AutoNumber</type>
</CustomField>