force-app/main/default/objects/Position__c/fields/Position_Status__c.field-meta.xml
<CustomField>
    <fullName>Position_Status__c</fullName>
    <label>Position Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opened</fullName>
                <default>true</default>
                <label>Opened</label>
            </value>
            <value>
                <fullName>Open - Approved</fullName>
            </value>
            <value>
                <fullName>In - Progress</fullName>
            </value>
            <value>
                <fullName>Recruited</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>