force-app/main/default/objects/Position__c/fields/Total_3_Child_Only__c.field-meta.xml
<CustomField>
    <fullName>Total_3_Child_Only__c</fullName>
    <label>Total 3 Child Only</label>
    <summaryForeignKey>Candidate__c.Position_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>